profile photo input

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                         
                         <input type="tel" name="" placeholder="Phone Number" id="phone">
                     </div>
+
+                    <!-- PROFILE PHOTO HERE -->
+                    <div class="type">
+                        <input type="file" name="pfp" placeholder="Profile Photo" id="pfp" accept="image/*" class="file-input">
+                        <label for="pfp" class="custom-file-label">Choose Profile Photo</label>
+                    </div>
                     <div class="type">
 
                         <input type="password" name="" placeholder="Password" id="password">
