fixed import to db

--- a/public/index.html
+++ b/public/index.html
@@ -37,18 +37,18 @@
             <div class="form sign_up">
                 <h3>Sign Up</h3>
 
-                <form action="#" id="form_input">
+                <form action="#" id="form_signup">
                     <div class="type">
 
-                        <input type="text" name="" placeholder="Full Name" id="name">
+                        <input type="text" name="full_name" placeholder="Full Name" id="name">
                     </div>
                     <div class="type">
                         
-                        <input type="email" name="" placeholder="Email" id="email">
+                        <input type="email" name="email" placeholder="Email" id="email">
                     </div>
                     <div class="type">
                         
-                        <input type="tel" name="" placeholder="Phone Number" id="phone">
+                        <input type="tel" name="phone_number" placeholder="Phone Number" id="phone">
                     </div>
 
                     <!-- PROFILE PHOTO HERE -->
@@ -62,7 +62,7 @@
                     </div>
                     <div class="type">
 
-                        <input type="password" name="" placeholder="Confirm Password" id="confirmpassword">
+                        <input type="password" name="password" placeholder="Confirm Password" id="confirmpassword">
                     </div>
 
                     <button class="btn bkg">Sign Up</button>
