--- a/public/index.html
+++ b/public/index.html
@@ -20,17 +20,18 @@
             <div class="form sign_in">
                 <h3>Log In</h3>
 
-                <form action="#" id="form_input">
+                <form action="#" id="form_login">
                     <div class="type">
                         <input type="email" placeholder="Email" name="" id="email">
 
                     </div>
                     <div class="type">
                         <input type="password" placeholder="Password" name="" id="password">
+                        <div id="login-error" class="error-message"></div>
 
                     </div>
 
-                    <button class="btn bkg">Log In</button>
+                    <button id="loginbtn" class="btn bkg">Log In</button>
                 </form>
             </div>
     
