--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
 
                 <form action="#" id="form_login">
                     <div class="type">
-                        <input type="email" placeholder="Email" name="" id="email">
+                        <input type="email" placeholder="Email" name="email" id="email">
 
                     </div>
                     <div class="type">
-                        <input type="password" placeholder="Password" name="" id="password">
+                        <input type="password" placeholder="Password" name="password" id="password">
                         <div id="login-error" class="error-message"></div>
 
                     </div>
@@ -45,7 +45,8 @@
                     </div>
                     <div class="type">
                         
-                        <input type="email" name="email" placeholder="Email" id="email" required>
+                        <input type="text" id="emailsignup" name="emailsignup" placeholder="Email" required>
+                        <div id="email-error" class="error-message"></div>
                     </div>
                     <div class="type">
                         
@@ -60,11 +61,11 @@
                     </div>
                     <div class="type">
 
-                        <input type="password" name="" placeholder="Password" id="password" required>
+                        <input type="password" id="passwordsignup" name="passwordsignup" placeholder="Password" required>
                     </div>
                     <div class="type">
 
-                        <input type="password" name="password" placeholder="Confirm Password" id="confirmpassword" required>
+                        <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" required>
                         <div id="pass-error" class="error-message"></div>
                     </div>
 
