logout (no session yet)

--- a/public/user.html
+++ b/public/user.html
@@ -24,6 +24,9 @@
 <body>
     <h1>Welcome User</h1>
 
-    <button id="logout-user" class="btn bkg">Logout</button>
+    <button class="logoutbtn btn bkg">Logout</button>
+
+    <!-- link script -->
+    <script src="./logout.js"></script>
 </body>
 </html>
