--- a/public/admin.html
+++ b/public/admin.html
@@ -24,6 +24,9 @@
 <body>
     <h1>Welcome Admin</h1>
 
-    <button id="logout-admin" class="btn bkg">Logout</button>
+    <button class="logoutbtn btn bkg">Logout</button>
+
+    <!-- link script -->
+    <script src="./logout.js"></script>
 </body>
 </html>
