--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,10 @@
                     </div>
 
                     <!-- PROFILE PHOTO HERE -->
-                    <div class="type">
-                        <input type="file" name="pfp" placeholder="Profile Photo" id="pfp" accept="image/*" class="file-input" required>
+                    <div class="type custom-file">
+                        <input type="file" name="pfp" id="pfp" accept="image/*" class="file-input" required>
                         <label for="pfp" class="custom-file-label">Choose Profile Photo</label>
+                        <div id="img-error" class="error-message"></div>
                     </div>
                     <div class="type">
 
