--- a/public/admin.html
+++ b/public/admin.html
@@ -7,19 +7,7 @@
 
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            flex-direction: column;
-        }
-        h1 {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="user.css">
 </head>
 <body>
     <h1>Welcome Admin</h1>
