--- a/public/admin.html
+++ b/public/admin.html
@@ -18,7 +18,7 @@
     </div>
     <div class="feed">
         <form id="admin-form">
-            <textarea id="admin-input" name="admin-input" placeholder="Tweet Something Funny" required></textarea><br>
+            <textarea id="admin-input" name="admin-input" placeholder="Tweet Your Bentables!" required></textarea><br>
             <div class="input-group">
                 <input type="number" id="price-input" name="price-input" placeholder="Price (PHP)" required>
                 <input type="number" id="quantity-input" name="quantity-input" placeholder="Quantity" required>
