autorization bypass fix

--- a/public/user.html
+++ b/public/user.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+<div id="content">
     <div class="left-container">
-        <h1>Welcome Admin</h1>
+        <h1>Welcome User</h1>
         <button class="logoutbtn btn bkg">Logout</button>
     </div>
     <div class="feed">
@@ -30,6 +31,7 @@
         <div id="posts-container">
         </div>
     </div>
+</div>
 
     <!-- link script -->
     <script src="./logout.js"></script>
