--- a/public/admin.html
+++ b/public/admin.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+<div class="content">
     <div class="left-container">
         <h1>Welcome Admin</h1>
         <button class="logoutbtn btn bkg">Logout</button>
@@ -30,6 +31,7 @@
         <div id="posts-container">
         </div>
     </div>
+</div>
 
     <!-- link script -->
     <script src="./logout.js"></script>
