--- a/public/admin.html
+++ b/public/admin.html
@@ -11,7 +11,7 @@
     <!-- Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="hidden">
 
     <div class="left-container">
         <h1>Welcome Admin</h1>
