--- a/public/user.html
+++ b/public/user.html
@@ -11,7 +11,7 @@
     <!-- Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="hidden">
 
     <div class="left-container">
         <h1>Welcome User</h1>
