--- a/public/admin.html
+++ b/public/admin.html
@@ -19,7 +19,8 @@
     </div>
     <div class="feed">
         <form id="admin-form">
-            <textarea id="admin-input" name="admin-input" placeholder="Tweet Your Bentables!" required></textarea><br>
+            <textarea id="admin-input" name="admin-input" placeholder="Tweet Your Bentables!" required maxlength="250"></textarea><br>
+            <div id="char-count">250 characters remaining</div>
             <div class="input-group">
                 <input type="number" id="price-input" name="price-input" placeholder="Price (PHP)" required>
                 <input type="number" id="quantity-input" name="quantity-input" placeholder="Quantity" required>
